--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,12 +1,3 @@
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.panel{
-    z-index: 1;
-    border: 1px dashed #8a8a8a;
+.main {
     padding: 10px;
-    background: #0e131a;
-    color: #fff;
 }
