--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,3 +1,10 @@
 .main {
-    padding: 10px;
+    padding: 20px;
+    height: 100%;
+}
+.area_work {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    height: calc(100% - 80px - 20px);
 }
