--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,9 +40,49 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3974a0;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3974a0;
+}
+
+
+
+
+
+
+
+
+
 .void-horizontal {
   margin-left: auto;
 }
+
 .void-vertical {
   margin-top: auto;
 }
@@ -61,6 +101,7 @@ input[type="password"] {
   border-bottom: 1.5px solid #D9D9D9;
   color: #EAEAEA;
   outline: none;
+  padding: 8px;
 }
 
 input[type="text"]:focus,
@@ -70,10 +111,27 @@ input[type="password"]:focus {
   border-bottom: 1.5px solid #48A7EE;
   outline: none;
 }
+
+textarea {
+  resize: none;
+  min-height: 100px;
+  background: none;
+  border: 1px dashed #D9D6D6;
+  color: #EAEAEA;
+  padding: 8px;
+}
+
+textarea:focus {
+  border: none;
+  border: 1px solid #48A7EE;
+  outline: none;
+}
+
 label {
   color: #fff;
 }
-.box-input{
+
+.box-input {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -85,13 +143,20 @@ button {
   color: #EAEAEA;
   cursor: pointer;
   font-size: 14px;
-  padding: 5px 25px ;
+  padding: 5px 25px;
 }
+
 button:hover {
   color: #fff;
   border: 2px solid #a2a2a2;
 }
+
 button:active {
+  border: 2px solid #3974a0;
+  color: #48A7EE;
+}
+
+button.activated {
   border: 2px solid #3974a0;
   color: #48A7EE;
 }
