--- a/src/app/dashboard/project/create/page.module.css
+++ b/src/app/dashboard/project/create/page.module.css
@@ -2,8 +2,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     height: 100%;
+}
+.containerCreateProject {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .titleComponent {
     color: #eaeaea;
@@ -12,5 +18,21 @@
 }
 
 .form {
-    min-width: 500px;
+    min-width: 400px;
+}
+.row {
+    display: flex;
+    flex-direction: row;
+}
+.edit_description {
+    color: #eaeaea;
+    margin-left: auto;
+    cursor: pointer;
+}
+.edit_description:hover {
+    color: #fff;
+    
+}
+.edit_description:hover {
+    color: #48a7ee;
 }
