--- a/src/components/member/MemberList.module.css
+++ b/src/components/member/MemberList.module.css
@@ -3,3 +3,17 @@
     flex-direction: row;
     gap: 10px;
 }
+
+.btnAdd {
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    border-width: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+}
+.btnAdd:hover {
+    border-width: 1px;
+}
