--- a/src/components/panel/PanelContainer.module.css
+++ b/src/components/panel/PanelContainer.module.css
@@ -2,6 +2,7 @@
     background-color: #0F1319;
     padding: 14px;
     border: 1px dashed #929292;
+    color: #fff;
 }
 .sub_container{
     background-color: #0C0F14;
