--- a/src/app/dashboard/project/components/modal/modal-view-task/ModalViewTask.module.css
+++ b/src/app/dashboard/project/components/modal/modal-view-task/ModalViewTask.module.css
@@ -1,6 +1,6 @@
 .modal {
-    gap: 10px;
-    width: 700px;
+    gap: 20px;
+    width: 600px;
     height: 600px;
     overflow: auto;
 }
@@ -12,7 +12,19 @@
 .exp {
     font-size: 14px;
     color: gold;
+    margin-top: 6px;
 }
 .title_tag {
     font-weight: bold;
+}
+.responsible_title {
+    font-weight: bold;
+    margin-bottom: 6px;
+}
+.subtask_title {
+    font-weight: bold;
+}
+.performers_title {
+    font-weight: bold;
+    margin-bottom: 6px;
 }
