--- a/src/components/member/Member.module.css
+++ b/src/components/member/Member.module.css
@@ -29,3 +29,9 @@
 .container:hover .close {
     display: block;
 }
+.selected {
+    border: 2px solid #8b3ad0;
+}
+.selected:hover {
+    border: 2px solid #a553ed;
+}
