feat: create task

--- a/src/app/dashboard/project/components/modal/modal-create-task/ModalCreateTask.module.css
+++ b/src/app/dashboard/project/components/modal/modal-create-task/ModalCreateTask.module.css
@@ -8,6 +8,7 @@
 .name {
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 5px;
 }
 .exp {
     font-size: 14px;
@@ -32,4 +33,8 @@
 .container_name {
     display: flex;
     flex-direction: column;
+}
+.deadline {
+    font-weight: bold;
+    margin-bottom: 5px;
 }
