--- a/src/app/dashboard/project/components/task/Task.module.css
+++ b/src/app/dashboard/project/components/task/Task.module.css
@@ -55,11 +55,16 @@
     width: 25px;
     height: 25px;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 .user_name {
     text-wrap: nowrap;
     font-size: 14px;
+    width: 100px;
+    white-space: nowrap; /* Текст не переносится */
+    overflow: hidden; /* Обрезаем всё за пределами блока */
+    text-overflow: ellipsis; /* Добавляем многоточие */
 }
 
 .process {
